--- a/NewCodingtonWebPortal/WebContent/WEB-INF/web.xml
+++ b/NewCodingtonWebPortal/WebContent/WEB-INF/web.xml
@@ -6,18 +6,32 @@
 	<display-name>NewCodingtonWeb</display-name>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
 	<resource-env-ref>
 		<resource-env-ref-name>jdbc/codingtondb</resource-env-ref-name>
 		<resource-env-ref-type>javax.sql.DataSource</resource-env-ref-type>
 	</resource-env-ref>
 	<servlet>
-	<servlet-name>FirstServlet</servlet-name>
-	<servlet-class>com.newcondington.web.servlets.FirstServlet</servlet-class>
+		<servlet-name>ServletLogin</servlet-name>
+		<servlet-class>controllers.ServletLogin</servlet-class>
 	</servlet>
 	<servlet-mapping>
-	<servlet-name>FirstServlet</servlet-name>
-	<url-pattern>/first</url-pattern>
+		<servlet-name>ServletLogin</servlet-name>
+		<url-pattern>/login</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>ServletFormularioUser</servlet-name>
+		<servlet-class>controllers.ServletFormularioUser</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ServletFormularioUser</servlet-name>
+		<url-pattern>/formuser</url-pattern>
 	</servlet-mapping>
 
 </web-app>
