--- a/NewCodingtonSpringPortal/WebContent/WEB-INF/web.xml
+++ b/NewCodingtonSpringPortal/WebContent/WEB-INF/web.xml
@@ -15,4 +15,14 @@
 		<url-pattern>*.htm</url-pattern>
 	</servlet-mapping>
 
+	<filter>
+		<filter-name>SessionFilter</filter-name>
+		<filter-class>com.newcodingtoncity.spring.filters.SessionFilter</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>SessionFilter</filter-name>
+		<url-pattern>*.htm</url-pattern>
+	</filter-mapping>
+
 </web-app>
