--- a/NewCodingtonSpringPortal/WebContent/WEB-INF/web.xml
+++ b/NewCodingtonSpringPortal/WebContent/WEB-INF/web.xml
@@ -19,10 +19,19 @@
 		<filter-name>SessionFilter</filter-name>
 		<filter-class>com.newcodingtoncity.spring.filters.SessionFilter</filter-class>
 	</filter>
-<!--
+
+
 	<filter-mapping>
 		<filter-name>SessionFilter</filter-name>
 		<url-pattern>*.htm</url-pattern>
 	</filter-mapping>
--->
+
+
+
+	<!--  <filter-mapping>
+		<filter-name>SessionFilter</filter-name>
+		<url-pattern>*.htm</url-pattern>
+	</filter-mapping> !-->
+
+
 </web-app>
